--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -85,7 +85,7 @@
 						</li>
 					</ul>
 					<div class="modal__actions">
-						<button class="button">Оформить</button>
+						<button class="button basket__button-confirm">Оформить</button>
 						<span class="basket__price">153 250 синапсов</span>
 					</div>
 				</div>
